Fix margin on page to 0, and add better text alignment for mid-info section.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
 }
 
 .header, .footer {
@@ -10,7 +11,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 0px 256px 0px 256px;
+    padding: 0px 364px 0px 364px;
 }
 
 .logo {
@@ -19,11 +20,10 @@ body {
 }
 
 .intro-container {
+    padding: 108px 0px 108px 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 64px;
-    padding: 108px 0px 108px 0px;
 }
 
 .text-container {
@@ -86,12 +86,14 @@ a {
     height: 200px;
     border-radius: 18px;
     border: solid 4px #3882F6;
-    display: flex;
 }
 
 .mid-text {
-    width: 200px;
-    height: 200px;
+    color: #1F2937;
+    font-size: 20px;
+    width: 195px;
+    height: 195px;
+    text-align: center;
 }
 
 .quote-container {
